[package]
name = "s3sync"
version = "0.1.0"
authors = ["Maros Korinek <apmaros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3" # cli
google-cloud = { version = "0.2.1", features = ["storage"] }
json = { package = "serde_json", version = "1.0.64" }
futures = "0.3"
tokio = { version = "1.4.0", features = ["macros", "fs"] }
crossterm = "0.19.0"
magick_rust = "0.14.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
bytes = { version = "1", features = ["serde"] }
rusoto_credential = "0.47.0"
